# vigil

./: .gitignore  AGENTS.md  CONTEXT.md  Justfile  LICENSE  README.md  biome.json  cliff.toml  index.html  package-lock.json  package.json  steward.config.json  tailwind.config.js  tsconfig.json  vite.config.js
.github/workflows/: build-mac-test.yml  build.yml  ci.yml  prepare-release.yml  release.yml  steward.yml
docs/: PURPOSE.md
docs/design/kinetic_obsidian/: DESIGN.md
docs/design/pr_mini_view_muted/: code.html
docs/design/repository_settings_minimal/: code.html
src/: App.jsx  declarations.d.ts  index.css  store.js  store.test.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  settings.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: PrCard.jsx
src/hooks/: useGitHub.js  useGitHub.test.js
src/utils/: time.js  time.test.js
src/views/: PrList.jsx  Settings.jsx
